Closed Bug 14818 Opened 25 years ago Closed 25 years ago

(standard mode) colspan values incorrectly change table size

Categories

(Core :: Layout: Tables, defect, P3)

Other
Other
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: allen.sam, Assigned: karnaze)

Details

(Whiteboard: [testcase])

Attachments

(1 file)

A cell's width changes (shrinks or enlarges) depending on its colspan values,
even if there are no other columns in the table. The current behavior is as
follows:

colspan > 800: width = 0
800 > colspan > 300: width decreases as colspan decreases
300 > colspan: width = auto

IE never decreases the width of the cells (which means the text is always
readable.)
Attached file testcase
Whiteboard: [testcase]
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → WORKSFORME
I've compared the testcase in:
  Netscape Communicator 4.51
  Internet Explorer 4.0
  Mozilla Apprunner 1999-09-24-08
    all this under Win98

The testcases looks almost exactly the same in all the three.
I'm marking this WORKSFORME.

Ps.
Your logic seems reverse, btw. The (spanned) cell width _increases_ as the
colspan value _increases_. The reason is the width of the spanned cells is the
sum of the cells it spans including (of course) the cellspacing between them.
So altough all columns has a width of 0, when cellspacing isn't 0 the colspanned
cell gets to the width: cellspacing*(colspan-1) at least.
Status: RESOLVED → REOPENED
Summary: colspan values change table size → (standard mode) colspan values incorrectly change table size
hyp-x:
Thanks for bringing this to my attention. I tested this on apprunner, and the
behavior was not reproducible; I then tested it in viewer -- and the problem
still exists when viewer is in Standard mode. In standard mode, the testcase
displays incorrectly.
Resolution: WORKSFORME → ---
Status: REOPENED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
Fixed with latest checkin.
Status: RESOLVED → VERIFIED
Verified fixed in Oct. 5th build.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: