bug 14818 - made standard mode like NavQuirks when handling colspans exceeding the number of columns.